--- a/1.入门安装/index.html
+++ b/1.入门安装/index.html
@@ -15,8 +15,8 @@
 <body>
     <div style="margin: auto;width: 100%;height: 100%;" class="egret-player" data-entry-class="Main">
     </div>
-    <script src="./js/egert.min.js"></script>
-    <script src="./js/egret.web.min.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="../js/egert.min.js"></script>
+    <script src="../js/egret.web.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
